fixed git repository

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com/bluezip/utility.git"
+    "url": "git@github.com:bluezip/utility.git"
   },
   "keywords": [
     "utility"
