--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "utility",
   "main": "app/index.js",
   "scripts": {
-    "preinstall": "node_modules/gulp-coffee/node_modules/.bin/coffee -o ./app/ -c ./src/",
-    "postinstall": "node_modules/gulp-mocha/node_modules/.bin/mocha app/*.js"
+    "preinstall": "./node_modules/gulp-coffee/node_modules/.bin/coffee -o ./app/ -c ./src/",
+    "postinstall": "./node_modules/gulp-mocha/node_modules/.bin/mocha app/*.js"
   },
   "repository": {
     "type": "git",
