--- a/package.json
+++ b/package.json
@@ -21,18 +21,15 @@
   },
   "homepage": "https://github.com/bluezip/utility",
   "devDependencies": {
-    "coffee-script": "^1.8.0",
     "gulp": "^3.8.10",
     "gulp-clean": "^0.3.1",
     "gulp-coffee": "^2.2.0",
-    "gulp-mocha": "^1.1.1",
-    "nodemon": "^1.2.1",
-    "should": "^4.3.0"
+    "gulp-mocha": "^1.1.1"
   },
   "dependencies": {
     "async": "^0.9.0",
-    "mocha": "^2.0.1",
     "coffee-script": "^1.8.0",
-    "mocha": "^2.0.1"
+    "mocha": "^2.0.1",
+    "should": "^4.3.0"
   }
 }
